# LongNumber

./: .gitignore  CMakeLists.txt  LongNumber  LongNumber.cpp  LongNumber.hpp  README.md  main  main.cpp
LongNumber/: CMakeLists.txt  LongNumber.cpp  LongNumber.hpp
LongNumber-release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  pi  tests
LongNumber-release/googletest-main/: CTestTestfile.cmake  Makefile  cmake_install.cmake
LongNumber-release/googletest-main/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
LongNumber-release/googletest-main/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
LongNumber-release/src/: Makefile  cmake_install.cmake
my_tests/: binary_dev_test.cpp  binary_mult_test.cpp  binary_plus_test.cpp  binary_sub_test.cpp  bool_test.cpp
src/: CMakeLists.txt  LongNumber.cpp  LongNumber.hpp
